Remove actionbar... should provide double-tap + toast for menu access

--- a/app/src/main/res/values-v11/styles.xml
+++ b/app/src/main/res/values-v11/styles.xml
@@ -7,7 +7,8 @@
     </style>
     -->
 
-<style name="NoActionBar">
+<style name="NoActionBar" parent="@android:style/Theme.Holo.Light">
+    <item name="android:windowActionBar">false</item>
     <item name="android:windowNoTitle">true</item>
 </style> 
 
